--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_map: ^3.0.0
   location: ^4.4.0
+  dio: ^4.0.6
+  flutter_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
