--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   location: ^4.4.0
   dio: ^4.0.6
   flutter_riverpod: ^2.1.1
+  go_router: ^5.2.0
 
 dev_dependencies:
   flutter_test:
