--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^4.0.6
   flutter_riverpod: ^2.1.1
   go_router: ^5.2.0
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
