--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.1.1
   go_router: ^5.2.0
   json_annotation: ^4.7.0
+  freezed_annotation: ^2.0.3
   sqflite: ^2.2.0+3
   path: ^1.8.2
   freezed: ^2.2.1
@@ -58,6 +59,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.3.2
+  json_serializable: ^6.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
