--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_map: ^3.0.0
+  latlong2: ^0.8.1
   location: ^4.4.0
   dio: ^4.0.6
   flutter_riverpod: ^2.1.1
@@ -47,6 +48,7 @@ dependencies:
   path: ^1.8.2
   freezed: ^2.2.1
   shimmer: ^2.0.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -73,8 +75,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - Assets/jouer.png
+    - Assets/Logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
