Map Geocalisation markerposition

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
   assets:
     - Assets/jouer.png
     - Assets/Logo.png
+    - Assets/bonhomme.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
