ajout des deux pages pour les informations sur un mot en particulier un encore a mettre en place quand on clique sur un point de la map l'autre ajouté quand on click sur une ligne de la liste Edit du bouton affichant la liste

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,10 @@ flutter:
     - Assets/jouer.png
     - Assets/Logo.png
     - Assets/bonhomme.png
+    - Assets/import.png
+    - Assets/export.png
+    - Assets/backpack.png
+    - Assets/delete.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
